# peruguide-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  ACTUALIZACION_CONDA_AGNOSTICO.md  DEMO_SCRIPT.md  DEVELOPMENT_ROLES.md  Dockerfile  Dockerfile.streamlit  EXECUTIVE_SUMMARY.md  FINAL_SUMMARY.md  GITHUB_PUBLICATION_CHECKLIST.md  INDEX.md  LICENSE  OPTIMIZATION_SUMMARY.md  PROGRESS_DAY1.md  PROGRESS_DAY2.md  PROGRESS_DAY3_4.md  PROGRESS_DAY5_7.md  PROGRESS_WEEK2.md  PROGRESS_WEEK3.md  PROGRESS_WEEK4.md  PROJECT_STRUCTURE.md  PROYECTO_LISTO_RESUMEN.md  README.md  README.old.md  README_NEW.md  REFERENCES.md  SETUP_CONFIGURACION.md  SETUP_RAPIDO.md  START_HERE.md  conftest.py  demo_quick.py  demo_simple.py  docker-compose.api.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.streamlit/: config.toml  config.toml.example
analisis/: ACTION_PLAN.md  ANALISIS_COMPLETO_Y_RECOMENDACIONES.md  EXECUTIVE_SUMMARY.md  GUIA_SETUP_INICIAL.md  INDEX.md  NOTEBOOKS_REFERENCE.md  PLANTEAMIENTO_DEFINITIVO_CON_ANALISIS.md  PLANTEAMIENTO_PORTAFOLIO_PRAGMATICO.md  PROJECT_PROPOSAL_ENHANCED.md  PROYECTO_PORTAFOLIO_FINAL.md  RESUMEN_DECISIONES_CLAVE.md  TECHNICAL_BEST_PRACTICES.md  VISUAL_ROADMAP.md
api/: __init__.py
app/: README.md  streamlit_app.py
app/.streamlit/: config.toml  secrets.toml.example
docker/: README.md
docker/init-db/: 01-init.sql
docs/: index.md
docs/architecture/: AGNOSTIC_DESIGN.md
examples/: 01_configuration_database.py
scripts/: ingest_pdfs.py  setup.py
scripts/deployment/: README.md  deploy-aws.sh  deploy-azure.sh  deploy-gcp.sh  deploy-streamlit.sh  run-local.ps1  run-local.sh
src/: __init__.py
src/api/: __init__.py  main.py
src/api/dependencies/: __init__.py
src/api/middleware/: __init__.py
src/api/routes/: __init__.py  health.py  models.py  query.py
src/api/schemas/: __init__.py
src/config/: settings.py
src/data_pipeline/: __init__.py
src/data_pipeline/chunkers/: __init__.py  recursive_splitter.py
src/data_pipeline/loaders/: __init__.py  pdf_loader.py
src/data_pipeline/processors/: __init__.py  cleaner.py  metadata_extractor.py
src/database/: __init__.py  database.py  models.py
src/embedding_pipeline/: __init__.py  batch_processor.py
src/evaluation/: __init__.py
src/inference_pipeline/: __init__.py
src/llm/: __init__.py  anthropic_llm.py  azure_openai_llm.py  base_llm.py  config.py  deepseek_llm.py  huggingface_llm.py  openai_llm.py
src/rag/: __init__.py  answer_generator.py
src/retrieval_pipeline/: __init__.py
src/retrieval_pipeline/retrievers/: __init__.py  semantic_retriever.py
src/utils/: __init__.py
src/vector_store/: __init__.py  base_store.py  faiss_store.py
tests/: __init__.py
tests/integration/: __init__.py  test_full_pipeline.py  test_simple_rag.py
tests/unit/data_pipeline/: test_cleaner.py  test_metadata_extractor.py  test_pdf_loader.py  test_recursive_splitter.py
tests/unit/embedding_pipeline/: test_batch_processor.py  test_sentence_transformer.py
tests/unit/llm/: test_anthropic_llm.py  test_azure_openai_llm.py  test_base_llm.py  test_config.py  test_deepseek_llm.py  test_huggingface_llm.py  test_openai_llm.py
tests/unit/rag/: test_answer_generator.py
tests/unit/retrieval_pipeline/: test_semantic_retriever.py
tests/unit/vector_store/: test_faiss_store.py
